Fix overflow of preformatted code
Set `overflow-x` to auto

--- a/style.css
+++ b/style.css
@@ -343,6 +343,7 @@ pre > code {
 	background-color: rgb(51, 51, 51);
 	color: rgb(255, 249, 217);
 	border-radius: 0.3rem;
+	overflow-x: auto;
 }
 .no-js dialog {
 	display: none;
